# try_RAG

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  config.yaml  config.yaml.example  docker-compose.yml  main.py  pyproject.toml
data/: knowledge.txt
